# ceos-ard-stac-sprint

./: README.md
.github/workflows/: ci.yml
ceos-ard-validator/: README.md  setup.cfg
ceos-ard-validator/src/ceos_ard_validator/: cli.py  constants.py  validate.py
ceos-ard-validator/tests/: requirements-dev.txt  test_validate.py
ceos-ard-validator/tests/data-files/: LC09_L2SP_092067_20220228_20220302_02_T1_SR.json
