[metadata]
name = ceos-ard-validator
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = Validates CEOS ARD STAC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/ceos-ard-stac-sprint
project_urls =
    Bug Tracker = https://github.com/gadomski/ceos-ard-stac-sprint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click >= 8.0
    pystac[validation] >= 1.4


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ceos-ard-validate = ceos_ard_validator.cli:main
